android: Add ktfmtVersion parameter for android modules
It uses the latest ktfmt version 0.53.

Signed-off-by: utzcoz <utzcoz@outlook.com>
Part-of: <https://gitlab.freedesktop.org/monado/monado/-/merge_requests/2382>

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ buildscript {
 
         // If you update this, must also update .gitlab-ci/config.yml
         buildToolsVersion = '34.0.0'
+
+        // ktfmt version
+        ktfmtVersion = "0.53"
     }
     repositories {
         google()
