targets/android: Bump ktfmt to 0.53 and reformat it
Signed-off-by: utzcoz <utzcoz@outlook.com>
Part-of: <https://gitlab.freedesktop.org/monado/monado/-/merge_requests/2382>

--- a/src/xrt/targets/android_common/build.gradle
+++ b/src/xrt/targets/android_common/build.gradle
@@ -28,7 +28,7 @@ spotless {
     kotlin {
         target 'src/main/java/**/*.kt'
         // Use ktfmt(https://github.com/facebook/ktfmt) as the default Kotlin formatter. .
-        ktfmt('0.43').kotlinlangStyle()
+        ktfmt("$ktfmtVersion").kotlinlangStyle()
     }
 }
 
