cmake: fix custom openxr target builds
MR.2401 made a change where the state_tracker directory
is now conditionally recursed into only if the main
openxr feature is enabled, this breaks derived runtimes
which have custom openxr/serivce/service-lib targets
that depend on the oxr target.

Part-of: <https://gitlab.freedesktop.org/monado/monado/-/merge_requests/2422>

--- a/src/xrt/state_trackers/oxr/CMakeLists.txt
+++ b/src/xrt/state_trackers/oxr/CMakeLists.txt
@@ -57,7 +57,7 @@ add_library(
 
 if(XRT_HAVE_VULKAN)
 	target_sources(st_oxr PRIVATE oxr_session_gfx_vk.c oxr_swapchain_vk.c oxr_vulkan.c)
-	target_link_libraries(st_oxr PUBLIC Vulkan::Vulkan)
+	target_link_libraries(st_oxr PUBLIC aux_vk)
 endif()
 
 if(XRT_HAVE_OPENGL OR XRT_HAVE_OPENGLES)
